Update api Sinh viên, Ngành
